2008-04-24  Marek Habersack  <mhabersack@novell.com>

	* RootBuilder.cs: when registering a custom control, add its path
	to the parser dependencies. Fixes bug #377915
	In the 2.0 profile, if the custom control being used was
	registered from web.config and is found in the same directory what
	the file being parsed, throw an exception. This behavior matches
	MS.NET.

	* TemplateParser.cs: added new VirtualPath property, which stores
	the virtual path to the file being parsed.

	* PageParser.cs: set the VirtualPath property in the 2.0 profile
	when constructing the parser.

2008-04-23  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: constructs the VirtualPath using the current
	parser's BaseVirtualDirectory. Fixes bug #381715

2008-04-19  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs: refactoring - move code between
	constructors, reader should be set before initializing the rest of
	the object. Fixes bug #381364

	* TemplateParser.cs: RegisterCustomControl must use absolute
	virtual path when querying the virtual path provider for
	file. Fixes bug #381364

2008-04-18  Marek Habersack  <mhabersack@novell.com>

	* ObjectStateFormatter.cs: ObjectFormatter.WriteObject should not
	use a converter if it can't convert _from_ the type of the object
	being written to the stream. Fixes issues with serializing, e.g.,
	a DataSet.

2008-04-14  Marek Habersack  <mhabersack@novell.com>

	* SimpleWebHandlerParser.cs, TemplateParser.cs, AspGenerator.cs:
	make sure streams are disposed the way they should be.

2008-04-10  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: refactoring - IdSeparator property is internally
	present also in 1.1.

2008-04-08  Dean Brettle <dean@brettle.com>

	* Page.cs (PageAdapter): fixed cast error when a ControlAdapter that
	wasn't a PageAdapter was used.

2008-04-08  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: CodeFile/Src handling uses